--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,7 @@ _UpgradeReport_Files/
 Backup/
 UpgradeLog.XML
  
-# Include dlls if they’re in the NuGet packages directory
+# Include dlls if theyï¿½re in the NuGet packages directory
 !/packages/*/lib/*.dll
 # VS Upgrade stuff #
 ####################
@@ -80,7 +80,7 @@ UpgradeLog.XML
 *.ReSharper.*
 # Packages #
 ############
-# it’s better to unpack these files and commit the raw source
+# itï¿½s better to unpack these files and commit the raw source
 # git has its own built in compression methods
 *.7z
 *.dmg
@@ -98,3 +98,8 @@ UpgradeLog.XML
 .DS_Store?
 ehthumbs.db
 Thumbs.db
+
+Tempeverything-claude-code/
+
+# Claude Code
+.claude/settings.local.json
