feat: 新增預覽背景切換功能、視窗 75% 螢幕置中、移除 Info 按鈕
- 預覽區背景預設深灰 (#3C3C3C)，可切換深灰/淺灰/棋盤格
- 棋盤格使用 DrawingBrush + TileMode.Tile 實現
- 主視窗啟動時為螢幕工作區域 75% 大小並置中
- DetailWindow 設為 CenterOwner 並指定 Owner
- MessageBox 與 OpenFileDialog 傳入 Owner 確保置中
- 移除工具列 Info 按鈕

--- a/SvgToXaml/SvgToXaml.csproj
+++ b/SvgToXaml/SvgToXaml.csproj
@@ -85,6 +85,7 @@
     <Compile Include="ViewModels\BindableBase.cs" />
     <Compile Include="ViewModels\GraphicImageViewModel.cs" />
     <Compile Include="ViewModels\ImageBaseViewModel.cs" />
+    <Compile Include="ViewModels\PreviewBackground.cs" />
     <Compile Include="ViewModels\SvgImageViewModel.cs" />
     <Compile Include="ViewModels\SvgImagesViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
