feat: 介面美化 — HandyControl 深色主題 + 現代化 UI（Feature 5）
- 整合 HandyControl 3.4.0 深色主題（SkinDark + Theme）
- 全新自訂樣式：工具列、狀態列、地址列、Toast、ContextMenu、ScrollBar、ToolTip、GridSplitter
- MainWindow：深色背景、Segoe UI 字型、卡片式 SVG 圖示（含檔名標籤）、藍色 VS Code 風格狀態列
- DetailWindow：深色背景、圓角邊框、中文標籤（設計尺寸/實際尺寸/縮放模式）
- FolderTree：深色選取色、透明背景、移除 SystemColors、深色 ScrollBar
- 新增 FolderPicker.cs：使用 IFileOpenDialog COM interop 取代舊式 FolderBrowserDialog
- 修正 VirtualizingWrapPanel 在 HandyControl SimplePanel 傳入 Infinity 時的 crash

--- a/SvgToXaml/SvgToXaml.csproj
+++ b/SvgToXaml/SvgToXaml.csproj
@@ -45,6 +45,9 @@
     <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HandyControl">
+      <HintPath>..\packages\HandyControl.3.4.0\lib\net462\HandyControl.dll</HintPath>
+    </Reference>
     <Reference Include="ICSharpCode.AvalonEdit">
       <HintPath>..\packages\AvalonEdit.5.0.2\lib\Net40\ICSharpCode.AvalonEdit.dll</HintPath>
     </Reference>
@@ -76,6 +79,7 @@
     <Compile Include="DetailWindow.xaml.cs">
       <DependentUpon>DetailWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\FolderPicker.cs" />
     <Compile Include="Infrastructure\InvertableBooleanToVisibilityConverter.cs" />
     <Compile Include="Infrastructure\HConsoleHelper.cs" />
     <Compile Include="Infrastructure\DispatcherExtensions.cs" />
@@ -99,6 +103,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="MainWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Themes\CustomStyles.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
