feat: i18n 中英語系切換 + 右鍵選單深色主題美化
- 新增 Localization/Strings.en.xaml、Strings.zh-TW.xaml 雙語字典
- 新增 LanguageManager 負責切換語系、持久化偏好至 Settings
- MainWindow / DetailWindow 所有硬編碼字串改用 DynamicResource
- 工具列新增語言切換按鈕（EN / 中）
- ContextMenu 及 MenuItem 改為完整 ControlTemplate，移除原生白色邊框
  加入圓角、陰影、hover 高亮，風格與深色主題一致

--- a/SvgToXaml/SvgToXaml.csproj
+++ b/SvgToXaml/SvgToXaml.csproj
@@ -80,6 +80,7 @@
       <DependentUpon>DetailWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\FolderPicker.cs" />
+    <Compile Include="Infrastructure\LanguageManager.cs" />
     <Compile Include="Infrastructure\InvertableBooleanToVisibilityConverter.cs" />
     <Compile Include="Infrastructure\HConsoleHelper.cs" />
     <Compile Include="Infrastructure\DispatcherExtensions.cs" />
@@ -103,6 +104,14 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="MainWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Localization\Strings.en.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Localization\Strings.zh-TW.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
