--- a/SvgToXaml/Properties/Settings.settings
+++ b/SvgToXaml/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="LastDir" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Language" Type="System.String" Scope="User">
+      <Value Profile="(Default)">en</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
