feat: Costura.Fody 單一 exe 輸出 + 刪除 Doc + 重寫 README
- 整合 Costura.Fody 5.7.0，編譯時將所有 DLL 嵌入 exe
  使用者下載單一 SvgToXaml.exe 即可直接執行
- GitHub Actions workflow 改為直接上傳 exe（不再打包 zip）
- 刪除 Doc/ 資料夾（截圖與 docx 文件）
- 重寫 README.md：功能列表、下載方式、CLI 用法、技術棧
- .gitignore 加入 nul

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,26 +33,11 @@ jobs:
       - name: Build Release
         run: msbuild SvgToXaml.sln /p:Configuration=Release /p:Platform="Any CPU" /v:minimal
 
-      - name: Prepare release artifacts
-        shell: pwsh
-        run: |
-          $out = "release-artifacts/SvgToXaml"
-          New-Item -ItemType Directory -Path $out -Force | Out-Null
-
-          # Copy main exe and all dependencies
-          $bin = "SvgToXaml/bin/Release"
-          Copy-Item "$bin/*.exe"    -Destination $out
-          Copy-Item "$bin/*.dll"    -Destination $out
-          Copy-Item "$bin/*.config" -Destination $out -ErrorAction SilentlyContinue
-
-          # Zip
-          Compress-Archive -Path $out -DestinationPath "release-artifacts/SvgToXaml.zip"
-
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: SvgToXaml
-          path: release-artifacts/SvgToXaml.zip
+          path: SvgToXaml/bin/Release/SvgToXaml.exe
 
       - name: Determine tag
         id: tag
@@ -74,10 +59,7 @@ jobs:
           body: |
             ## SvgToXaml ${{ steps.tag.outputs.TAG }}
 
-            ### 使用方式
-            1. 下載 `SvgToXaml.zip`
-            2. 解壓縮到任意資料夾
-            3. 執行 `SvgToXaml.exe`
-          files: release-artifacts/SvgToXaml.zip
+            Download `SvgToXaml.exe` and run — no installation or extraction needed.
+          files: SvgToXaml/bin/Release/SvgToXaml.exe
           draft: false
           prerelease: false
