--- a/SvgToXaml/packages.config
+++ b/SvgToXaml/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AvalonEdit" version="5.0.2" targetFramework="net45" />
+  <package id="Costura.Fody" version="5.7.0" targetFramework="net462" />
+  <package id="Fody" version="6.8.2" targetFramework="net462" developmentDependency="true" />
   <package id="HandyControl" version="3.4.0" targetFramework="net462" />
 </packages>
