feat: GitHub Release 版本檢查 + 工具列更新按鈕
- 新增 GitHubUpdateService，呼叫 GitHub API 比較版本
- 工具列右側新增藍色更新按鈕，有新版本時自動顯示
- 點擊按鈕開啟瀏覽器前往 Release 下載頁面
- 中英文語系支援更新提示文字
- CI 發布時自動從 git tag 寫入 AssemblyVersion

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,28 @@ jobs:
       - name: Restore NuGet packages
         run: nuget restore SvgToXaml.sln
 
+      - name: Patch AssemblyInfo with tag version
+        shell: pwsh
+        run: |
+          # 從 tag 取得版本號（v1.3.1 → 1.3.1）
+          if ("${{ github.event_name }}" -eq "push") {
+            $tag = "${{ github.ref_name }}"
+          } else {
+            $tag = "${{ github.event.inputs.tag_name }}"
+          }
+          if ($tag -and $tag -match '^v?(\d+\.\d+\.\d+)') {
+            $ver = $Matches[1]
+            $fourPart = "$ver.0"
+            $file = "SvgToXaml/Properties/AssemblyInfo.cs"
+            $content = Get-Content $file -Raw
+            $content = $content -replace 'AssemblyVersion\("[^"]*"\)', "AssemblyVersion(`"$fourPart`")"
+            $content = $content -replace 'AssemblyFileVersion\("[^"]*"\)', "AssemblyFileVersion(`"$fourPart`")"
+            Set-Content $file $content -NoNewline
+            Write-Host "Patched AssemblyInfo.cs to version $fourPart"
+          } else {
+            Write-Host "No valid tag — keeping default version"
+          }
+
       - name: Build Release
         run: msbuild SvgToXaml.sln /p:Configuration=Release /p:Platform="Any CPU" /v:minimal
 
