feat: 匯出 UserControl XAML + 預覽視窗 + 圖示大小記憶
- 匯出功能改為 UserControl 格式，ResourceDictionary 內嵌圖片資源
  搭配 WrapPanel 排列預覽（一列 20 張、40x40、Margin=3）
- 移除匯出時的所有 InputBox 問答，只保留 SaveFileDialog
- 新增 ExportPreviewWindow，匯出後自動彈出預覽視窗
  視窗大小為螢幕工作區 75%，置中顯示
- Slider 圖示大小綁定 ViewModel 並持久化到設定檔

--- a/SvgToXaml/SvgToXaml.csproj
+++ b/SvgToXaml/SvgToXaml.csproj
@@ -80,6 +80,9 @@
     <Compile Include="DetailWindow.xaml.cs">
       <DependentUpon>DetailWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ExportPreviewWindow.xaml.cs">
+      <DependentUpon>ExportPreviewWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Infrastructure\GitHubUpdateService.cs" />
     <Compile Include="Infrastructure\FolderPicker.cs" />
     <Compile Include="Infrastructure\LanguageManager.cs" />
@@ -98,6 +101,10 @@
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="WrapPanel\VirtualizingWrapPanel.cs" />
     <Page Include="DetailWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ExportPreviewWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
