--- a/SvgToXaml/Properties/Settings.settings
+++ b/SvgToXaml/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="Language" Type="System.String" Scope="User">
       <Value Profile="(Default)">en</Value>
     </Setting>
+    <Setting Name="IconSize" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">96</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
